Ajuste en el servicio dbContext, para que funcione con Promise, el método para importar datos está funcionando bien

--- a/www/templates/tab-tools.html
+++ b/www/templates/tab-tools.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Tools">
     <ion-content class="has-header" padding="true">
         <button style="" class="button button-positive button-block " ng-click="installDatabase()" ng-disabled="runningProcess">Install database</button>
-        <button style="" class="button button-positive button-block " ng-click="importData()" ng-disabled="runningProcess">Importar datos</button>
+        <button style="" class="button button-positive button-block " ng-click="importData()" ng-disabled="runningProcess">Import data</button>
     </ion-content>
 </ion-view>
