--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -10,23 +10,23 @@
                 </form>
                 <ion-list ng-hide="searcher.hideList">
                     <ion-item class="item-divider">Customers</ion-item>
-                    <ion-item class="item-button-right" ng-repeat="r in searcher.customers| filter: { name: searcher.search }">
-                        {{ r.name}}
-                        <button class="button button-positive" ng-click="onSelectCustomer(r.id)">
+                    <ion-item class="item-button-right" ng-repeat="r in searcher.customers| filter: { Name: searcher.search }">
+                        {{ r.Name}}
+                        <button class="button button-positive" ng-click="onSelectCustomer(r.Id)">
                             <i class="icon ion-checkmark"></i>
                         </button>
                     </ion-item>
                     <ion-item class="item-divider">Batteries</ion-item>
-                    <ion-item class="item-button-right" ng-repeat="r in searcher.batteries| filter: { description: searcher.search }">
-                        {{ r.description}}
-                        <button class="button button-positive" ng-click="onSelectBattery(r.customerId, r.id)">
+                    <ion-item class="item-button-right" ng-repeat="r in searcher.batteries| filter: { Description: searcher.search }">
+                        {{ r.Description}}
+                        <button class="button button-positive" ng-click="onSelectBattery(r.CustomerId, r.Id)">
                             <i class="icon ion-checkmark"></i>
                         </button>
                     </ion-item>
                     <ion-item class="item-divider">Chargers</ion-item>
-                    <ion-item class="item-button-right" ng-repeat="r in searcher.chargers| filter: { description: searcher.search }">
-                        {{ r.description}}
-                        <button class="button button-positive" ng-click="onSelectCharger(r.customerId, r.id)">
+                    <ion-item class="item-button-right" ng-repeat="r in searcher.chargers| filter: { Description: searcher.search }">
+                        {{ r.Description}}
+                        <button class="button button-positive" ng-click="onSelectCharger(r.CustomerId, r.Id)">
                             <i class="icon ion-checkmark"></i>
                         </button>
                     </ion-item>
@@ -38,13 +38,13 @@
                 <form>
                     <label class="item item-select">
                         <span class="input-label">Marca</span>
-                        <select ng-options="t.id as t.name for t in batteryResources.trademarks" ng-model="battery.trademarkId">
+                        <select ng-options="t.Id as t.Name for t in batteryResources.trademarks" ng-model="battery.trademarkId">
                             <option>Seleccione</option>
                         </select>
                     </label>
                     <label class="item item-select">
                         <span class="input-label">Modelo</span>
-                        <select ng-options="m.id as m.name for m in batteryResources.models" ng-model="battery.modelId">
+                        <select ng-options="m.Id as m.Name for m in batteryResources.models" ng-model="battery.modelId">
                             <option>Seleccione</option>
                         </select>
                     </label>
@@ -61,17 +61,64 @@
         </ion-tab>
         <ion-tab title="Charger" icon="ion-flash" hidden="{{ tabs.hideChargerTab}}">
             <ion-content padding="true" class="has-header">
-                <form></form>
+                <form>
+                    <label class="item item-select">
+                        <span class="input-label">Marca</span>
+                        <select ng-options="t.Id as t.Name for t in chargerResources.trademarks" ng-model="charger.trademarkId">
+                            <option>Seleccione</option>
+                        </select>
+                    </label>
+                    <label class="item item-select">
+                        <span class="input-label">Modelo</span>
+                        <select ng-options="m.Id as m.Name for m in chargerResources.models" ng-model="charger.modelId">
+                            <option>Seleccione</option>
+                        </select>
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Serial</span>
+                        <input placeholder="" type="text" ng-model="charger.serial">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label"># Interno</span>
+                        <input placeholder="" type="text" ng-model="charger.customerReference">
+                    </label>
+                </form>
             </ion-content>
         </ion-tab>
         <ion-tab title="Machine" icon="ion-gear-a" hidden="{{ tabs.hideMachineTab}}">
             <ion-content padding="true" class="has-header">
-                <form></form>
+                <form>
+                    <label class="item item-select">
+                        <span class="input-label">Marca</span>
+                        <select ng-options="t.Id as t.Name for t in machineResources.trademarks" ng-model="machine.trademarkId">
+                            <option>Seleccione</option>
+                        </select>
+                    </label>
+                    <label class="item item-select">
+                        <span class="input-label">Modelo</span>
+                        <select ng-options="m.Id as m.Name for m in machineResources.models" ng-model="machine.modelId">
+                            <option>Seleccione</option>
+                        </select>
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Serial</span>
+                        <input placeholder="" type="text" ng-model="machine.serial">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label"># Interno</span>
+                        <input placeholder="" type="text" ng-model="machine.customerReference">
+                    </label>
+                </form>
             </ion-content>
         </ion-tab>
         <ion-tab title="Work to be done" icon="ion-hammer" hidden="{{ tabs.hideWorkToBeDoneTab}}">
             <ion-content padding="true" class="has-header">
-                <form></form>
+                <form>
+                    <label class="item item-input">
+                        <span class="input-label">Trabajo a realizar</span>
+                        <textarea ng-model="maintenance.workToBeDone"></textarea>
+                    </label>
+                </form>
             </ion-content>
         </ion-tab>
         <ion-tab title="Physical inspection" icon="ion-clipboard" hidden="{{ tabs.hidePhysicalInspectionTab}}">
