--- a/www/templates/new.html
+++ b/www/templates/new.html
@@ -1,4 +1,4 @@
-<ion-view view-title="New maintenance">
+<ion-view view-title="Nuevo">
     <ion-content padding="true" class="has-header">
         <form>
             <label class="item item-input">
