--- a/www/templates/tools.html
+++ b/www/templates/tools.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Tools">
+<ion-view view-title="Herramientas">
     <ion-content class="has-header" padding="true">
-        <button style="" class="button button-positive button-block " ng-click="installDatabase()" ng-disabled="runningProcess">Install database</button>
-        <button style="" class="button button-positive button-block " ng-click="importData()" ng-disabled="runningProcess">Import data</button>
+        <button style="" class="button button-positive button-block " ng-click="installDatabase()" ng-disabled="runningProcess">Instalar base de datos</button>
+        <button style="" class="button button-positive button-block " ng-click="importData()" ng-disabled="runningProcess">Importar datos</button>
     </ion-content>
 </ion-view>
