--- a/www/templates/details.html
+++ b/www/templates/details.html
@@ -1,4 +1,4 @@
-<ion-view title="Nuevo mantenimiento">
+<ion-view title="Nuevo mantenimiento" cache-view="false">
     <ion-tabs class="tabs-positive tabs-icon-top">
         <ion-tab title="Search" icon="ion-search" hidden="{{ tabs.hideSearcherTab}}">
             <ion-content padding="true" class="has-header">
