--- a/www/templates/tools.html
+++ b/www/templates/tools.html
@@ -2,5 +2,6 @@
     <ion-content class="has-header" padding="true">
         <button style="" class="button button-positive button-block " ng-click="installDatabase()" ng-disabled="runningProcess">Instalar base de datos</button>
         <button style="" class="button button-positive button-block " ng-click="importData()" ng-disabled="runningProcess">Importar datos</button>
+        <button style="" class="button button-positive button-block " ng-click="exportData()" ng-disabled="runningProcess">Exportar datos</button>
     </ion-content>
 </ion-view>
